SketchSystem.sdk/.metadata/.plugins/org.eclipse.cdt.ui/videoImageTest.build.log
20:15:55 **** Incremental Build of configuration Debug for project videoImageTest ****
make pre-build main-build 
a9-linaro-pre-build-step
' '
'Building file: ../src/videoImageProcessingTest.c'
'Invoking: ARM v7 gcc compiler'
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/videoImageProcessingTest.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../videoImageTest_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/videoImageProcessingTest.d" -MT"src/videoImageProcessingTest.o" -o "src/videoImageProcessingTest.o" "../src/videoImageProcessingTest.c"
../src/videoImageProcessingTest.c: In function 'main':
../src/videoImageProcessingTest.c:44:8: error: redeclaration of 'filteredImage2' with no linkage
  char *filteredImage2;
        ^~~~~~~~~~~~~~
../src/videoImageProcessingTest.c:43:8: note: previous declaration of 'filteredImage2' was here
  char *filteredImage2;
        ^~~~~~~~~~~~~~
../src/videoImageProcessingTest.c:47:2: error: 'filteredImage3' undeclared (first use in this function)
  filteredImage3 = malloc(sizeof(char)*(imageSize));
  ^~~~~~~~~~~~~~
../src/videoImageProcessingTest.c:47:2: note: each undeclared identifier is reported only once for each function it appears in
make: *** [src/videoImageProcessingTest.o] Error 1

20:16:12 Build Finished (took 17s.254ms)

